--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -130,22 +130,16 @@ a
 // Recaptcha
 
 .grecaptcha-badge
-  width: 70px !important
-  overflow: hidden !important
-  transition: all 0.3s ease !important
-  left: 4px !important
-
-.grecaptcha-badge:hover
-  width: 256px !important
+  visibility: hidden !important
 
 // Remove blue shadow when button clicked
 
-.btnd:active,
-.btnd:focus,
-.btnd:focus:active
-  background-image: none
-  outline: 0
-  box-shadow: none
+input,
+textarea,
+button,
+select,
+a
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
 
 // Landing page
 
@@ -797,6 +791,18 @@ a
     grid-column-gap: 30px
     grid-row-gap: 20px
     margin-top: 30px
+
+    .recaptcha
+      width: calc(100% - 350px)
+      grid-row: 4
+      grid-column: 2
+      align-self: center
+      font-size: 14px
+      color: #D3D3D3
+      margin-left: 20px
+
+      a
+        display: inline
 
     input, textarea
       width: 100%
